commit latest changes